force-app/main/default/objects/Account/fields/HSUD_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>HSUD_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Hamburg Sud sales person responsible for this Account.</inlineHelpText>
    <label>Hamburg Sud Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <infoMessage>Please select an Internal User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_HSUD_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>