force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
This field is added for selecting industries on account.
#RQ-000235 - Added picklist value &quot;Other&quot; and Help text.
#RQ-004927
#RQ-004162 - Removed the picklist value &quot;other&quot;</description>
    <inlineHelpText>Indicates the industry categories this account is involved with</inlineHelpText>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture Horticulture &amp; Livestock</fullName>
            </value>
            <value>
                <fullName>Banking Insurance &amp; Financial Services</fullName>
            </value>
            <value>
                <fullName>Biotechnology and Life Sciences</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Chemicals Petroleum Rubber &amp; Plastic</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Computer Hardware</fullName>
            </value>
            <value>
                <fullName>Computer Software</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Food &amp; Tobacco Manufacturing</fullName>
            </value>
            <value>
                <fullName>Industrial Electric &amp; Electronic Machinery</fullName>
            </value>
            <value>
                <fullName>Information Services</fullName>
            </value>
            <value>
                <fullName>Leather Stone Clay &amp; Glass Products</fullName>
            </value>
            <value>
                <fullName>Media &amp; Broadcasting</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Metal Products</fullName>
            </value>
            <value>
                <fullName>Mining &amp; Extraction</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Manufacturing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Printing &amp; Publishing</fullName>
            </value>
            <value>
                <fullName>Property Services</fullName>
            </value>
            <value>
                <fullName>Public Administration Education Health Social Services</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Textiles &amp; Clothing Manufacturing</fullName>
            </value>
            <value>
                <fullName>Transport Freight and Storage</fullName>
            </value>
            <value>
                <fullName>Transport Manufacturing</fullName>
            </value>
            <value>
                <fullName>Travel Personal &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Waste Management &amp; Treatment</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Wood Furniture &amp; Paper Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>