force-app/main/default/objects/Account/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <description>Highlight influence level of account as part of #RQ-004024</description>
    <inlineHelpText>Select Yes if you can impact the client&apos;s buying decision (positive effect on volume)by making a proactive quality sales call to them. Sales reps should only make sales calls to customers they can influence</inlineHelpText>
    <label>Influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>