force-app/main/default/objects/Account/fields/Is_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Client__c</fullName>
    <description>RQ-000953. This field can be used to identify if the Account Record type is &apos;Client&apos;.</description>
    <formula>RecordType.DeveloperName = &apos;Client_Account&apos;</formula>
    <label>Is Client?</label>
    <type>Checkbox</type>
</CustomField>