force-app/main/default/objects/Account/fields/Is_Concern__c.field-meta.xml
<CustomField>
    <fullName>Is_Concern__c</fullName>
    <description>RQ-000953. This field can be used to identify if the Account Record type is &apos;Concern&apos;.</description>
    <formula>RecordType.DeveloperName = &apos;Concern_Account&apos;</formula>
    <label>Is Concern?</label>
    <type>Checkbox</type>
</CustomField>