force-app/main/default/objects/Account/fields/Is_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact__c</fullName>
    <label>No. of  Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>