force-app/main/default/objects/Account/fields/is_Draft_Account__c.field-meta.xml
<CustomField>
    <fullName>is_Draft_Account__c</fullName>
    <formula>IF ($RecordType.DeveloperName == &apos;Draft_Account&apos;,&apos;TRUE&apos; , &apos;FALSE&apos;)</formula>
    <label>is Draft Account</label>
    <type>Text</type>
</CustomField>