force-app/main/default/objects/Account/fields/Is_Non_shipping_Party__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_shipping_Party__c</fullName>
    <description>RQ-000953. This field can be used to identify if the Account Record type is &apos;Non Shipping Party&apos;.</description>
    <formula>RecordType.DeveloperName  = &apos;X3rd_Party_Account&apos;</formula>
    <label>Is Non shipping Party?</label>
    <type>Checkbox</type>
</CustomField>