force-app/main/default/objects/Account/fields/Is_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity__c</fullName>
    <label>No. of Opportunity</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>