force-app/main/default/objects/Account/fields/Is_Unassigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Unassigned__c</fullName>
    <description>#RQ-000953. This field can be used to check the &apos;Unassigned &apos; Account record type in apex, WF and Validation rules.</description>
    <formula>RecordType.DeveloperName  = &apos;Unassigned&apos;</formula>
    <label>Is Unassigned?</label>
    <type>Checkbox</type>
</CustomField>