force-app/main/default/objects/Account/fields/IsConcern__c.field-meta.xml
<CustomField>
    <fullName>IsConcern__c</fullName>
    <description>#RQ-000026 - To identify if Account is Concern Account.</description>
    <formula>IF (BEGINS( SCV_Code__c, &quot;***&quot; ),&apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsConcern</label>
    <type>Text</type>
</CustomField>