force-app/main/default/objects/Account/fields/IsUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUpdated</label>
    <type>Checkbox</type>
</CustomField>