force-app/main/default/objects/Account/fields/Key_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Type__c</fullName>
    <description>Visible only to SCL reps</description>
    <label>z_Key Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Key</fullName>
            </value>
            <value>
                <fullName>Development KA</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>