force-app/main/default/objects/Account/fields/last__c.field-meta.xml
<CustomField>
    <fullName>last__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xxxlast</label>
    <type>Date</type>
</CustomField>