force-app/main/default/objects/Account/fields/Legacy_ExtID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ExtID__c</fullName>
    <description>Stores the External ID of the system from where this record was migrated.
#RQ-007439
#RQ-010167: Label changed</description>
    <inlineHelpText>Damco FACT Code, ask Live Help to update once corresponding code is created in Damco MDM</inlineHelpText>
    <label>Damco FACT Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>