force-app/main/default/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927
#RQ-009391: String Too Long Issue for Legal Name Field on Accounts Object.</description>
    <inlineHelpText>The registered name for a Company , this field is populated from CMD via integration</inlineHelpText>
    <label>Legal Name</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>