force-app/main/default/objects/Account/fields/Maersk_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Maersk_Line_Group__c</fullName>
    <description>Created as part of #RQ-004311 - Add Segments to Account</description>
    <label>z_Maersk Line Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Client</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>NotApplicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>