force-app/main/default/objects/Account/fields/Maersk_Line_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Maersk_Line_Value_Proposition__c</fullName>
    <description>Created as part of #RQ-004311 - Add Segments to Account</description>
    <label>z_Maersk Line Value Proposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joint Business Partner</fullName>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Ambition</fullName>
            </value>
            <value>
                <fullName>Advancement</fullName>
            </value>
            <value>
                <fullName>Efficiency</fullName>
            </value>
            <value>
                <fullName>Ease</fullName>
            </value>
            <value>
                <fullName>Super Saver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>