force-app/main/default/objects/Account/fields/Maersk_Owner_Text__c.field-meta.xml
<CustomField>
    <fullName>Maersk_Owner_Text__c</fullName>
    <description>Maersk Owner is copied to this field on cut off date i.e. when sales rep might have changed on client for SIP Actuals processing.</description>
    <label>Maersk Owner Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>