force-app/main/default/objects/Account/fields/Major_Sector__c.field-meta.xml
<CustomField>
    <fullName>Major_Sector__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <label>Major Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>