force-app/main/default/objects/Account/fields/Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Market value of a company’s outstanding shares.</inlineHelpText>
    <label>Market Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>