force-app/main/default/objects/Account/fields/Master_Duplicate_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Master_Duplicate_Customer_Code__c</fullName>
    <inlineHelpText>This code represents the active customer that this customer record is a duplicate of.</inlineHelpText>
    <label>Master Duplicate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>