force-app/main/default/objects/Account/fields/MCC_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>MCC_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#PR-0047: 
Set through one-way integration with master data system SCV / SMDS, therefore should be read only for all users.</description>
    <inlineHelpText>The MCC Line sales person responsible for this Account.</inlineHelpText>
    <label>MCC Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <infoMessage>Please select an Internal User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>