force-app/main/default/objects/Account/fields/MCC_Account_Owner_Maersk_Id__c.field-meta.xml
<CustomField>
    <fullName>MCC_Account_Owner_Maersk_Id__c</fullName>
    <description>Created to hold Maersk User ID of respective Linerbrand owners - #RQ-007146</description>
    <label>MCC Account Owner Maersk Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>