force-app/main/default/objects/Account/fields/MSL_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>MSL_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#Safmarine_United
Set through one-way integration with master data system SCV / SMDS, therefore should be read only for all users.
#RQ-004168 - Updated FLS</description>
    <inlineHelpText>The Maersk Line sales person responsible for this Account.</inlineHelpText>
    <label>Maersk Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <infoMessage>Please select an Internal User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_MSL_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>