force-app/main/default/objects/Account/fields/MSL_Export_Salescode__c.field-meta.xml
<CustomField>
    <fullName>MSL_Export_Salescode__c</fullName>
    <description>+++ INTEGRATION: SCV +++</description>
    <label>MSL Export Salescode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>