force-app/main/default/objects/Account/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>In country identifier for company like company registeration number, it varies locally</inlineHelpText>
    <label>National ID</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>