force-app/main/default/objects/Account/fields/No_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Employees__c</fullName>
    <description>SFMC- 7611 -Indicates the number of employees the customer has</description>
    <inlineHelpText>Indicates the number of employees the customer has</inlineHelpText>
    <label>No. of Employees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>10-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-200</fullName>
            </value>
            <value>
                <fullName>&gt;200</fullName>
            </value>
            <value>
                <fullName>&gt;500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>