force-app/main/default/objects/Account/fields/Non_Profit_Customer__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Customer__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>This field is used to indicate if company is a non-profit organisation like charity etc</inlineHelpText>
    <label>Non-Profit Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>