force-app/main/default/objects/Account/fields/NPS_Score__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score__c</fullName>
    <description>This field is part of the CES Score and is populated by a Dataload.</description>
    <label>NPS Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>