force-app/main/default/objects/Account/fields/NPS_Score_Previous__c.field-meta.xml
<CustomField>
    <fullName>NPS_Score_Previous__c</fullName>
    <label>NPS Score (Previous)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>