force-app/main/default/objects/Account/fields/Operating_Revenue_Turn_Over__c.field-meta.xml
<CustomField>
    <fullName>Operating_Revenue_Turn_Over__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Sales generated from a company’s day-to-day business activities.</inlineHelpText>
    <label>Operating Revenue Turn Over</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>