force-app/main/default/objects/Account/fields/OTS_Assigned_Accounts__c.field-meta.xml
<CustomField>
    <fullName>OTS_Assigned_Accounts__c</fullName>
    <description>This will identify the OTS accounts which are assigned to specific person</description>
    <formula>AND(NOT(ISBLANK(Sales_Group__c)),CONTAINS(TEXT(MSL_Account_Owner__r.Sales_Job_Function__c ), &apos;One Team Sales&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTS Assigned Accounts</label>
    <type>Checkbox</type>
</CustomField>