force-app/main/default/objects/Account/fields/Parent_Key_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Key_Account_Type__c</fullName>
    <description>Visible only to SCL reps.
Field used in Key Account reports (displays the Key Account type of the parent, if applicable). Can be &quot;Key , Development KA or Not Key&quot;.</description>
    <formula>TEXT(Parent.Key_Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_Parent Key Account Type</label>
    <type>Text</type>
</CustomField>