force-app/main/default/objects/Account/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <description>SC-8104 --&gt; Segregation of Customers basis Cash and Credit (New Field)</description>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>