force-app/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#RQ-000235 - Help text added.
#RQ-000608 - Case Management Phase 1 - Removed Lookup filter.</description>
    <inlineHelpText>Primary Sales Contact for Maersk Line.</inlineHelpText>
    <label>z_Maersk Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>