force-app/main/default/objects/Account/fields/Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Profit_Margin__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Operating revenue is revenue (sales) generated from a company&apos;s day-to-day business activities. This field is updated via integration from CMD.</inlineHelpText>
    <label>Profit Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>