force-app/main/default/objects/Account/fields/Quadrant_Average__c.field-meta.xml
<CustomField>
    <fullName>Quadrant_Average__c</fullName>
    <description>This field holds the Average Quadrant value and is update by a data load.</description>
    <label>Quadrant-Average</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>