force-app/main/default/objects/Account/fields/Quadrant_Date__c.field-meta.xml
<CustomField>
    <fullName>Quadrant_Date__c</fullName>
    <description>This field holds the date when the Quadrant data is updated and is update by a data load.</description>
    <label>Quadrant Date</label>
    <type>Date</type>
</CustomField>