force-app/main/default/objects/Account/fields/Quadrant_Manual__c.field-meta.xml
<CustomField>
    <fullName>Quadrant_Manual__c</fullName>
    <description>This field holds the Manual Quadrant value and is update by a data load.</description>
    <label>Quadrant-Manual</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>