force-app/main/default/objects/Account/fields/Quadrant_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Quadrant_Weighted__c</fullName>
    <description>This field holds the Weighted Quadrant value and is update by a data load.</description>
    <label>Quadrant-Weighted</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>