force-app/main/default/objects/Account/fields/Recommended_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Credit_Limit__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Credit limit recommended by BVD</inlineHelpText>
    <label>Recommended Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>