force-app/main/default/objects/Account/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>#RQ-000235 - Help text added.</description>
    <formula>IF($RecordType.DeveloperName ==&apos;Client_Account&apos;,&apos;Client Account&apos;,IF($RecordType.DeveloperName ==&apos;Concern_Account&apos;,&apos;Concern Account&apos;,IF($RecordType.DeveloperName ==&apos;Draft_Account&apos;,&apos;Draft Account&apos;,IF($RecordType.DeveloperName ==&apos;Unassigned&apos;,&apos;Unassigned&apos;,&apos;Client Account&apos;))))</formula>
    <inlineHelpText>Concern Account, Client Account, Draft Account, Unassigned.</inlineHelpText>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>