force-app/main/default/objects/Account/fields/Represents_Concern__c.field-meta.xml
<CustomField>
    <fullName>Represents_Concern__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#RQ-004705
As part of the interim solution will create a new field called &quot;Represents Concern&quot; and this is to show the equivalent of the &quot;Is-Concern&quot; relationship that master data will have</description>
    <inlineHelpText>When set to true this highlights that this SCV code is the equivalent of the concern level account</inlineHelpText>
    <label>Represents Concern</label>
    <type>Checkbox</type>
</CustomField>