force-app/main/default/objects/Account/fields/Rolling_Protection__c.field-meta.xml
<CustomField>
    <fullName>Rolling_Protection__c</fullName>
    <description>&quot;+++ INTEGRATION: MASTER DATA +++ 
Do not change this field without reviewing impact with master data integration&quot; 
#RQ-004162 
#RQ-004927</description>
    <inlineHelpText>Internal field to indicate if a customer has rolling protection or not</inlineHelpText>
    <label>Rolling Protection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>